--- a/code/java/worker/pom.xml
+++ b/code/java/worker/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Worker</groupId>
-    <artifactId>upm.lssp.worker</artifactId>
+    <artifactId>upm.lssp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
