--- a/code/nodejs/manager/package.json
+++ b/code/nodejs/manager/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "kafka-node": "^3.0.1",
     "node-zookeeper-client": "^0.2.2",
     "zookeeper-client": "^0.1.0",
     "zookeeper-watcher": "^1.0.2"
