--- a/code/nodejs/manager/manager-interface/package.json
+++ b/code/nodejs/manager/manager-interface/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ngx-restangular": "^3.0.0",
+    "pusher-js": "^4.3.1",
     "restangular": "^1.6.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
