--- a/code/nodejs/manager/package.json
+++ b/code/nodejs/manager/package.json
@@ -10,10 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
-    "kafka-node": "^3.0.1",
-    "node-zookeeper-client": "^0.2.2",
-    "zookeeper-client": "^0.1.0",
+    "pusher": "^2.1.3",
     "zookeeper-watcher": "^1.0.2"
   }
 }
