Implemented Junit for tests

--- a/code/java/worker/pom.xml
+++ b/code/java/worker/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>bootstrapfx-core</artifactId>
             <version>0.2.4</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
